--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Preethi's Portfolio</title>
+</head>
 <body>
-<h1>Preethi's Portfolio</h1>
 <p>I am now hosted with GitHub Pages.</p>
 </body>
 </html>
